# cg-game-engine

./: .gitignore  CMakeLists.txt  README.md
objects/Crate/: Crate1.mtl
objects/eye/: eyeball.mtl
objects/fish/: fish.mtl
objects/skull/: 12140_Skull_v3_L2.mtl
src/: app.cpp  app.h  camera.cpp  camera.h  main.cpp  mainwindow.ui  opengl_win.cpp  opengl_win.h  physics.cpp  physics.h
src/resources/: resourses.qrc
src/resources/shaders/: cubeFragmentShader.glsl  cubeVertexShader.glsl  meshFragmentShader.glsl  meshVertexShader.glsl
src/shapes/: aabb.cpp  aabb.h  cube.cpp  cube.h  light.cpp  light.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shape.cpp  shape.h
